macros/src/snapshots/mongodb_atlas_cli_macros__render__tests__snapshot_get_group_cluster.snap
---
source: macros/src/render.rs
assertion_line: 335
expression: formatted
---
mod __generated {
    #[allow(dead_code)]
    #[derive(Debug, Clone, PartialEq, Eq)]
    struct GetGroupClusterRequest {}
    #[derive(Debug, Default, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct GetGroupClusterOperationUrlParams {
        pub group_id: String,
        pub cluster_name: String,
    }
    #[derive(Debug, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct GetGroupClusterOperation {
        pub url_parameters: GetGroupClusterOperationUrlParams,
    }
    impl ::mongodb_atlas_cli::atlas::Operation for GetGroupClusterOperation {
        type Response = ClusterDescription20240805;
        fn method(&self) -> ::http::Method {
            ::http::Method::GET
        }
        fn url(&self) -> String {
            format!(
                "/api/atlas/v2/groups/{}/clusters/{}", self.url_parameters.group_id, self
                .url_parameters.cluster_name
            )
        }
        fn version(&self) -> ::mongodb_atlas_cli::atlas::Version {
            ::mongodb_atlas_cli::atlas::Version::date(2024u16, 8u8, 5u8)
        }
        fn parse_response(
            bytes: ::bytes::Bytes,
        ) -> ::std::result::Result<
            Self::Response,
            ::mongodb_atlas_cli::atlas::OperationError,
        > {
            ::serde_json::from_slice(&bytes)
                .map_err(::mongodb_atlas_cli::atlas::OperationError::Deserialize)
        }
    }
}
