macros/src/snapshots/mongodb_atlas_cli_macros__render__tests__snapshot_list_group_clusters.snap
---
source: macros/src/render.rs
assertion_line: 276
expression: formatted
---
mod __generated {
    #[allow(dead_code)]
    #[derive(Debug, Clone, PartialEq, Eq)]
    struct ListGroupClustersRequest {}
    #[derive(Debug, Default, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct ListGroupClustersOperationUrlParams {
        pub group_id: String,
    }
    #[derive(Debug, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct ListGroupClustersOperation {
        pub url_parameters: ListGroupClustersOperationUrlParams,
        #[builder(default)]
        pub pagination: ::mongodb_atlas_cli::atlas::paginated::PaginationRequest,
    }
    impl ::mongodb_atlas_cli::atlas::Operation for ListGroupClustersOperation {
        type Response = ::mongodb_atlas_cli::atlas::paginated::PaginatedResponse<
            ClusterDescription20240805,
        >;
        fn method(&self) -> ::http::Method {
            ::http::Method::GET
        }
        fn url(&self) -> String {
            let mut url = format!(
                "/api/atlas/v2/groups/{}/clusters", self.url_parameters.group_id
            );
            self.pagination.append_to(&mut url);
            url
        }
        fn version(&self) -> ::mongodb_atlas_cli::atlas::Version {
            ::mongodb_atlas_cli::atlas::Version::date(2024u16, 8u8, 5u8)
        }
    }
}
