macros/src/snapshots/mongodb_atlas_cli_macros__render__tests__snapshot_update_group_cluster.snap
---
source: macros/src/render.rs
assertion_line: 383
expression: formatted
---
mod __generated {
    #[derive(Debug, Clone, PartialEq, Eq)]
    #[derive(::serde::Serialize)]
    struct UpdateGroupClusterRequest {}
    #[derive(Debug, Default, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct UpdateGroupClusterOperationUrlParams {
        pub group_id: String,
        pub cluster_name: String,
    }
    #[derive(Debug, Clone, PartialEq, Eq)]
    #[derive(::typed_builder::TypedBuilder)]
    pub struct UpdateGroupClusterOperation {
        pub url_parameters: UpdateGroupClusterOperationUrlParams,
        pub body: UpdateGroupClusterRequest,
    }
    impl ::mongodb_atlas_cli::atlas::Operation for UpdateGroupClusterOperation {
        type Response = ClusterDescription20240805;
        fn method(&self) -> ::http::Method {
            ::http::Method::PATCH
        }
        fn url(&self) -> String {
            format!(
                "/api/atlas/v2/groups/{}/clusters/{}", self.url_parameters.group_id, self
                .url_parameters.cluster_name
            )
        }
        fn version(&self) -> ::mongodb_atlas_cli::atlas::Version {
            ::mongodb_atlas_cli::atlas::Version::date(2024u16, 10u8, 23u8)
        }
        fn parse_response(
            bytes: ::bytes::Bytes,
        ) -> ::std::result::Result<
            Self::Response,
            ::mongodb_atlas_cli::atlas::OperationError,
        > {
            ::serde_json::from_slice(&bytes)
                .map_err(::mongodb_atlas_cli::atlas::OperationError::Deserialize)
        }
        fn request_body(&self) -> ::bytes::Bytes {
            ::serde_json::to_vec(&self.body)
                .map(::bytes::Bytes::from)
                .unwrap_or_default()
        }
    }
}
